<resources>
    <string name="app_name">SuperFinishing</string>
    <string name="title_activity_bot_nav">BotNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_booking">Bookings</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_accounts">Account</string>
    <string name="title_products">Products</string>
    <string name="title_services">Services</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_location_permission">Location Permission</string>
    <string name="text_location_permission">Location Permission</string>
    <string name="ok">Ok</string>
</resources>