<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_products">

    <fragment
        android:id="@+id/navigation_products"
        android:name="com.superfinishing.ui.products.ProductsFragment"
        android:label="@string/title_products"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/navigation_services"
        android:name="com.superfinishing.ui.services.ServicesFragment"
        android:label="@string/title_services"
        tools:layout="@layout/fragment_services" />

    <fragment
        android:id="@+id/navigation_bookings"
        android:name="com.superfinishing.ui.bookings.BookingFragment"
        android:label="@string/title_booking"
        tools:layout="@layout/fragment_booking" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.superfinishing.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.superfinishing.ui.accounts.AccountFragment"
        android:label="@string/title_accounts"
        tools:layout="@layout/fragment_account" />


</navigation>